# Testcase-agent

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  pyproject.toml  requirements.json
.claude/: settings.local.json
console-ui/: index.html  package-lock.json  package.json  vite.config.ts
console-ui/src/: App.test.tsx  App.tsx  index.css  main.tsx
docs/: good-testcase-definition.md  optimization-workflow.md  prompt-quality-optimization.md
docs/adr/: 0001-prompt-first-architecture.md  0002-claude-md-discipline-sections.md  (+3 more)
docs/agents/: domain.md
exports/: gen_results.json  generated_bms_requirements.xlsx  generated_cases.html  render_cases.py
optimization/: apply_sanitize.py  claude_evaluator.py  cli.py  evaluator.py  generate_case_html.py  generate_report.py  manual_review.py  prompt_debug_report.py  report_template.html
optimization_runs/: README.md  checklist_v1.md  checklist_v2.md  scoring_rubrics.md
prompts/: analyze_and_plan.system.html  analyze_and_plan.system.jinja  analyze_and_plan.user.html  generate_case.system.html  generate_case.user.html  review_analysis.system.html  review_analysis.user.html  self_check.system.html  self_check.user.html
review_pipeline/: artifacts.md  cli.py  pattern_tags.yml
static/: index.html
tests/: test_case_html_renderer.py  test_claude_evaluator.py  test_cli_output.py  test_evaluator.py  test_generate_pipeline.py  test_html_parser.py  test_manual_review.py  test_pipeline_console.py  test_post_process.py  test_prompt_debug_report.py  test_requirement_set.py  test_review_pipeline.py  test_simplified_pipeline.py
(+163 files in other folders)
