[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testcase-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "openpyxl>=3.1",
    "beautifulsoup4>=4.13",
    "lxml>=5.3",
    "openai>=1.68",
    "pydantic-settings>=2.7",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
